[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Saw.gd" type="Script" id=1]
[ext_resource path="res://misc/player_shader.tres" type="Shader" id=2]
[ext_resource path="res://sprites/saw.png" type="Texture" id=3]
[ext_resource path="res://sfx/saw_spawn.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/saw_turn.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/saw_land.wav" type="AudioStream" id=6]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/PLAYER_COLOR = null
shader_param/MOOD_COLOR = null

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 25, 25 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "main"
length = 0.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 27.0

[node name="Saw" type="KinematicBody2D" groups=["Looping"]]
material = SubResource( 2 )
collision_layer = 16
collision_mask = 6
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/main = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="FloorCasts" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="FloorCasts"]
position = Vector2( -25, 25 )
enabled = true
collision_mask = 8

[node name="Right" type="RayCast2D" parent="FloorCasts"]
position = Vector2( 25, 25 )
enabled = true
collision_mask = 8

[node name="WallCasts" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="WallCasts"]
position = Vector2( 25, 26 )
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 8

[node name="Right" type="RayCast2D" parent="WallCasts"]
position = Vector2( -25, 26 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 8

[node name="UpWallCasts" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="UpWallCasts"]
position = Vector2( 25, 0 )
enabled = true
cast_to = Vector2( -51, 0 )
collision_mask = 8

[node name="Right" type="RayCast2D" parent="UpWallCasts"]
position = Vector2( -25, 0 )
enabled = true
cast_to = Vector2( 51, 0 )
collision_mask = 8

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -25.0
margin_top = 25.0
margin_right = 25.0
margin_bottom = 73.0
color = Color( 1, 0, 0, 1 )

[node name="Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sound Effect"

[node name="Land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Sound Effect"

[node name="Turn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sound Effect"
